Update 'go-rattaccc' component image to: quay.io/rhtap_qe/go-rattaccc:465d5138053522700ea0c74bb0a1e0d730cd0c16@sha256:013255d704b3e744ced949ae6ed2087b731532a0c9bc3bf0a5330f031e3f24b9

--- a/components/go-rattaccc/overlays/development/deployment-patch.yaml
+++ b/components/go-rattaccc/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-rattaccc
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-rattaccc:465d5138053522700ea0c74bb0a1e0d730cd0c16@sha256:013255d704b3e744ced949ae6ed2087b731532a0c9bc3bf0a5330f031e3f24b9
+          name: container-image
